# itchamps_custom_org_layout

./: MANIFEST.in  PROJECT_CONTEXT.md  README.md  license.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
itchamps_custom_org_layout/: hooks.py  modules.txt
itchamps_custom_org_layout.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
itchamps_custom_org_layout/api/: org_chart.py
itchamps_custom_org_layout/itchamps_custom_org_layout/: __init__.py
itchamps_custom_org_layout/public/css/: custom_org_chart.css
itchamps_custom_org_layout/public/js/: custom_org_chart.js
