[metadata]
name = itchamps_custom_org_layout
version = 1.0.0
description = Custom Org Chart with Department/Branch Grouping
long_description = file: README.md
long_description_content_type = text/markdown
author = ITChamps
author_email = tjs.kutnikar@gmail.com
license = MIT

[options]
packages = find:
python_requires = >=3.10
